--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,9 @@
 {
-  "short_name": "PP Cam",
-  "name": "PP Cam - Security Solutions",
+  "short_name": "PP Surveillance",
+  "name": "PP Surveillance and Security Solutions",
   "icons": [
     {
-      "src": "logo.png",
+      "src": "PP Cam CCTV Security Logo in Blue and Gray.png",
       "sizes": "192x192",
       "type": "image/png"
     }
