Update company name to PP Surveillance & Security Solutions, replace logo, and make services clickable to WhatsApp

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "PP Surveillance and Security Solutions",
   "icons": [
     {
-      "src": "PP Cam CCTV Security Logo in Blue and Gray.png",
+      "src": "ppsurveillancelogo.png",
       "sizes": "192x192",
       "type": "image/png"
     }
